--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -7,7 +7,7 @@
       xmlns:userControl="clr-namespace:TemporaTasks.UserControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Home" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
+      Title="Home" Loaded="Page_Loaded" Unloaded="Page_Unloaded" Focusable="True">
     
     <Page.Resources>
         <Style x:Key="DummyFocus" TargetType="{x:Type Control}">
@@ -20,6 +20,10 @@
             </Setter>
         </Style>
     </Page.Resources>
+    
+    <Page.FocusVisualStyle>
+        <Style/>
+    </Page.FocusVisualStyle>
 
     <Grid x:Name="MainGrid" Margin="50 0 50 0">
 
@@ -71,7 +75,7 @@
 
             </StackPanel>
 
-            <Label FocusVisualStyle="{DynamicResource DummyFocus}" x:Name="label" Content="Home" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" DockPanel.Dock="Left" Padding="0,0,0,0" VerticalContentAlignment="Stretch" Focusable="True"/>
+            <Label FocusVisualStyle="{DynamicResource DummyFocus}" x:Name="label" Content="Home" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" DockPanel.Dock="Left" Padding="0,0,0,0" VerticalContentAlignment="Stretch"/>
 
         </DockPanel>
 
