Feature added Keyboard navigation now has task focused with some offset, so as to not stick to the edge

--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -79,8 +79,8 @@
 
         </DockPanel>
 
-        <ScrollViewer Style="{StaticResource CustomScrollViewerStyle}" HorizontalScrollBarVisibility="Disabled" Margin="0 110 -17 0" Focusable="False">
-            <StackPanel x:Name="InnerStack">
+        <ScrollViewer x:Name="TaskStackScroller" Style="{StaticResource CustomScrollViewerStyle}" HorizontalScrollBarVisibility="Disabled" Margin="0 110 -17 0" Focusable="False">
+            <StackPanel>
                 <StackPanel x:Name="TaskStack"/>
                 <Rectangle Height="50"/>
             </StackPanel>
