--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -112,4 +112,14 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--https://www.svgrepo.com/svg/521486/arrow-up-->
+
+    <DrawingImage x:Key="taillessArrowIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M24,24z M0,0z M18.2929,15.2893C18.6834,14.8988,18.6834,14.2656,18.2929,13.8751L13.4007,8.98766C12.6195,8.20726,11.3537,8.20757,10.5729,8.98835L5.68257,13.8787C5.29205,14.2692 5.29205,14.9024 5.68257,15.2929 6.0731,15.6835 6.70626,15.6835 7.09679,15.2929L11.2824,11.1073C11.673,10.7168,12.3061,10.7168,12.6966,11.1073L16.8787,15.2893C17.2692,15.6798,17.9024,15.6798,18.2929,15.2893z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
 </ResourceDictionary>
