--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -1,62 +1,64 @@
 ﻿<UserControl x:Class="TemporaTasks.UserControls.IndividualTask"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:TemporaTasks.UserControls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="100" d:DesignWidth="800" Loaded="IndividualTask_Loaded">
 
     <Grid x:Name="ucGrid">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="14"/>
-            <RowDefinition/>
-            <RowDefinition Height="15"/>
+            <RowDefinition Height="14" />
+            <RowDefinition />
+            <RowDefinition Height="15" />
         </Grid.RowDefinitions>
 
-        <Border x:Name="StrokeBorder" Grid.Row="1" CornerRadius="5" BorderBrush="{StaticResource Blue}" BorderThickness="0" Width="{Binding ActualWidth, ElementName=Background, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=Background, Mode=OneWay}"/>
+        <Border x:Name="StrokeBorder" Grid.Row="1" CornerRadius="5" BorderBrush="{StaticResource Blue}" BorderThickness="0" Width="{Binding ActualWidth, ElementName=Background, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=Background, Mode=OneWay}" />
 
-        <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" MouseEnter="Background_MouseEnter" MouseLeave="Background_MouseLeave" MouseDown="Background_MouseDown"/>
+        <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" MouseEnter="Background_MouseEnter" MouseLeave="Background_MouseLeave" MouseDown="Background_MouseDown" />
 
-        <Line VerticalAlignment="Bottom" Stroke="{StaticResource Accent}" StrokeThickness="2" X2="{Binding ActualWidth, ElementName=Background}" Grid.Row="2" Opacity="0.25"/>
+        <Line VerticalAlignment="Bottom" Stroke="{StaticResource Accent}" StrokeThickness="2" X2="{Binding ActualWidth, ElementName=Background}" Grid.Row="2" Opacity="0.25" />
 
         <DockPanel VerticalAlignment="Center" Grid.Row="1">
 
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" Margin="0 0 13 0">
 
-                <Label x:Name="DueDateTimeLabel" Foreground="{StaticResource Text}" Opacity="1" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsHitTestVisible="True" Padding="13 0 0 0" MouseEnter="DueDateTimeLabel_MouseEnter"/>
+                <Label x:Name="DueDateTimeLabel" Foreground="{StaticResource Text}" Opacity="1" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsHitTestVisible="True" Padding="13 0 0 0" MouseEnter="DueDateTimeLabel_MouseEnter" />
 
                 <StackPanel x:Name="Icons" Orientation="Horizontal" Width="0" HorizontalAlignment="Right" Background="#00000000" Margin="13 0 0 0">
 
                     <StackPanel x:Name="incrementsPanel" Orientation="Horizontal">
-                    <Grid>
-                            <Border x:Name="now" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown"/>
-                        <Label Content="Now" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False"/>
-                    </Grid>
 
-                    <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus5m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown"/>
-                        <Label Content="+5m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False"/>
-                    </Grid>
+                        <Grid>
+                            <Border x:Name="now" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown" />
+                            <Label Content="Now" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
+                        </Grid>
 
-                    <Grid Margin="5 0 0 0">
-                            <Border x:Name="plus10m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown"/>
-                        <Label Content="+10m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False"/>
-                    </Grid>
+                        <Grid Margin="5 0 0 0">
+                            <Border x:Name="plus5m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown" />
+                            <Label Content="+5m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
+                        </Grid>
 
-                    <Grid Margin="5 0 13 0">
-                            <Border x:Name="plus30m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown"/>
-                        <Label Content="+30m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False"/>
-                    </Grid>
+                        <Grid Margin="5 0 0 0">
+                            <Border x:Name="plus10m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown" />
+                            <Label Content="+10m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
+                        </Grid>
+
+                        <Grid Margin="5 0 13 0">
+                            <Border x:Name="plus30m" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" IsMouseDirectlyOverChanged="Button_IsMouseDirectlyOverChanged" Width="30" Height="30" MouseDown="Increment_MouseDown" />
+                            <Label Content="+30m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" FontSize="9" Foreground="{StaticResource Text}" HorizontalAlignment="Center" VerticalAlignment="Center" IsHitTestVisible="False" />
+                        </Grid>
+                    </StackPanel>
 
                     <local:IconButton x:Name="EditIcon" SVGSource="{StaticResource pencilIcon}" Width="30" Height="30" MouseDown="EditIcon_MouseDown">
                         <local:IconButton.ToolTip>
                             <ToolTip>
                                 <ToolTip.Content>
                                     <StackPanel Orientation="Horizontal">
-                                        <local:ButtonToolTip ToolTipText="Edit Task" Button1Text="e" CornerRadius="2 0 0 2" BorderPadding="5 5 0 5"/>
-                                        <local:ButtonToolTip ToolTipText="/" Button1Text="enter" CornerRadius="0 2 2 0" BorderPadding="2 5 5 5"/>
+                                        <local:ButtonToolTip ToolTipText="Edit Task" Button1Text="e" CornerRadius="2 0 0 2" BorderPadding="5 5 0 5" />
+                                        <local:ButtonToolTip ToolTipText="/" Button1Text="enter" CornerRadius="0 2 2 0" BorderPadding="2 5 5 5" />
                                     </StackPanel>
                                 </ToolTip.Content>
                             </ToolTip>
@@ -68,41 +70,34 @@
                             <ToolTip>
                                 <ToolTip.Content>
                                     <StackPanel Orientation="Horizontal">
-                                        <local:ButtonToolTip ToolTipText="Delete Task" Button1Text="d" CornerRadius="2 0 0 2" BorderPadding="5 5 0 5"/>
-                                        <local:ButtonToolTip ToolTipText="/" Button1Text="del" CornerRadius="0 2 2 0" BorderPadding="2 5 5 5"/>
+                                        <local:ButtonToolTip ToolTipText="Delete Task" Button1Text="d" CornerRadius="2 0 0 2" BorderPadding="5 5 0 5" />
+                                        <local:ButtonToolTip ToolTipText="/" Button1Text="del" CornerRadius="0 2 2 0" BorderPadding="2 5 5 5" />
                                     </StackPanel>
                                 </ToolTip.Content>
                             </ToolTip>
                         </local:IconButton.ToolTip>
                     </local:IconButton>
-
                 </StackPanel>
-
             </StackPanel>
 
             <Grid DockPanel.Dock="Left">
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="40"/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="40" />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
                 <Border BorderBrush="{StaticResource CheckBox}" BorderThickness="2" CornerRadius="2" HorizontalAlignment="Center" Width="14" Height="14" IsHitTestVisible="False">
-                    <Path Data="M1,4 L4,6 L7,1" x:Name="checkMark" Stroke="{StaticResource Blue}" Width="8" Height="8" Margin="0 1 0 0" StrokeThickness="2" IsHitTestVisible="False" Opacity="0"/>
+                    <Path Data="M1,4 L4,6 L7,1" x:Name="checkMark" Stroke="{StaticResource Blue}" Width="8" Height="8" Margin="0 1 0 0" StrokeThickness="2" IsHitTestVisible="False" Opacity="0" />
                 </Border>
 
                 <Grid Grid.Column="1">
 
-                    <TextBlock x:Name="taskNameTextBlock" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0,0,0,0" IsHitTestVisible="False" TextTrimming="CharacterEllipsis" MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"/>
+                    <TextBlock x:Name="taskNameTextBlock" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0,0,0,0" IsHitTestVisible="False" TextTrimming="CharacterEllipsis" MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}" />
 
-                    <Rectangle x:Name="strikethroughLine" Stroke="{StaticResource DarkBlue}" VerticalAlignment="Bottom" Margin="0 0 0 14" IsHitTestVisible="False" Height="2" MaxWidth="{Binding ActualWidth, ElementName=taskNameTextBlock}" HorizontalAlignment="Left"/>
-
+                    <Rectangle x:Name="strikethroughLine" Stroke="{StaticResource DarkBlue}" VerticalAlignment="Bottom" Margin="0 0 0 14" IsHitTestVisible="False" Height="2" MaxWidth="{Binding ActualWidth, ElementName=taskNameTextBlock}" HorizontalAlignment="Left" />
                 </Grid>
-
             </Grid>
-
         </DockPanel>
-
     </Grid>
-
 </UserControl>
