--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -5,7 +5,6 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TemporaTasks.Pages"
       xmlns:userControl="clr-namespace:TemporaTasks.UserControls"
-      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AddTaskPage" Loaded="Page_Loaded" Unloaded="Page_Unloaded">
@@ -18,61 +17,93 @@
             <ColumnDefinition MaxWidth="50"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="1" MaxWidth="600" VerticalAlignment="Center">
+        <Grid Grid.Column="1" MaxWidth="700" Margin="0 90 0 0">
 
-            <Label x:Name="label" Content="Add a Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Top" Padding="0,0,0,0" Margin="0 50 0 0"/>
+            <Label x:Name="label" Content="Add a Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Bold" Foreground="{StaticResource Text}" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Top" Padding="0,0,0,0"/>
 
-            <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Margin="0 110 0 0" Focusable="False">
+            <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Margin="0 70 0 0" Focusable="False">
 
                 <StackPanel>
 
-                    <DockPanel Margin="0 5 0 5" Height="30">
+                    <StackPanel>
 
-                        <Label Content="Task Name" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                        <Label Content="Task Name" Padding="0" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12"/>
 
-                        <Border x:Name="NameBorder" Background="#333333" BorderBrush="{StaticResource PastDue}" BorderThickness="0" DockPanel.Dock="Right">
-                            <TextBox x:Name="TaskNameTextbox" TextChanged="TaskNameTextbox_TextChanged"/>
-                        </Border>
+                        <Grid Height="40" Margin="0 5 0 0">
+                            <TextBox x:Name="TaskNameTextbox" Style="{StaticResource RoundedTextBox}" TextChanged="TaskNameTextbox_TextChanged"/>
+                            <Border x:Name="NameBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
+                        </Grid>
 
-                    </DockPanel>
+                    </StackPanel>
 
-                    <Grid Margin="0 5 0 5" Height="30">
+                    <Grid Margin="0 15 0 0">
 
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1.25*"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="20"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
 
-                        <DockPanel>
+                        <StackPanel>
 
-                            <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10" DockPanel.Dock="Left"/>
+                            <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10"/>
 
-                            <Label Content="Date" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                            <Label Content="Date" Padding="0" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Margin="0 0 0 5"/>
 
-                            <Border x:Name="calendarButtonBorder" DockPanel.Dock="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseUp="calendar_MouseUp" Focusable="False" Padding="10 0 10 0" Cursor="Hand">
-                                <Border.Background>
-                                    <SolidColorBrush  Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
-                                </Border.Background>
-                                <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="12" IsHitTestVisible="False"/>
-                            </Border>
+                            <Grid Height="40">
 
-                            <Border x:Name="DateBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
-                                <TextBox x:Name="dateTextBox" DockPanel.Dock="Right" BorderThickness="10,1,1,1"/>
-                            </Border>
-                        </DockPanel>
+                                <TextBox x:Name="dateTextBox" Style="{StaticResource RoundedTextBox}"/>
 
-                        <DockPanel Grid.Column="1">
-                            <Label Content="Time" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="20,0,10,0"/>
-                            <Border x:Name="TimeBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
-                                <TextBox x:Name="timeTextBox"/>
-                            </Border>
-                        </DockPanel>
+                                <Border x:Name="calendarButtonBorder" HorizontalAlignment="Right" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseUp="calendar_MouseUp" Focusable="False" Width="40" Cursor="Hand" CornerRadius="0 10 10 0">
+                                    <Border.Background>
+                                        <SolidColorBrush  Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                                    </Border.Background>
+                                    <Image x:Name="calendarIcon" Source="{StaticResource calendarIcon}" Width="15" IsHitTestVisible="False"/>
+                                </Border>
 
+                                <Border x:Name="DateBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
+
+                            </Grid>
+                        
+                        </StackPanel>
+
+                        <StackPanel Grid.Column="2">
+                            
+                            <Label Content="Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" Margin="0 0 0 5"/>
+
+                            <Grid>
+                                <TextBox x:Name="timeTextBox" Style="{StaticResource RoundedTextBox}"/>
+                                <Border x:Name="TimeBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" Height="40" CornerRadius="10"/>
+                            </Grid>
+                            
+                        </StackPanel>
+                        
                     </Grid>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <!--<DockPanel Margin="0 5 0 5" Height="30">
 
-                        <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Margin="0 10 0 0" Height="40" Cursor="Hand">
+                        <Label Content="Repeat every" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+
+                        <Border DockPanel.Dock="Right" Width="100" Background="{StaticResource TitleBar}">
+                            <ComboBox VerticalContentAlignment="Center" SelectedIndex="0">
+                                <ComboBoxItem Content="minutes"/>
+                                <ComboBoxItem Content="hours"/>
+                                <ComboBoxItem Content="days"/>
+                                <ComboBoxItem Content="weeks"/>
+                                <ComboBoxItem Content="months"/>
+                                <ComboBoxItem Content="years"/>
+                            </ComboBox>
+                        </Border>
+                        
+                        <Border x:Name="RepeatTimeBorder" Background="#333333" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
+                            <TextBox x:Name="RepeatTimeTextBox" Background="Transparent"/>
+                        </Border>
+
+                    </DockPanel>-->
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 20 0 0">
+
+                        <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Height="40" Cursor="Hand">
 
                             <Border.Background>
                                 <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
@@ -90,7 +121,7 @@
 
                         </Border>
 
-                        <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 10 0 0" Height="40" Cursor="Hand">
+                        <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 0 0 0" Height="40" Cursor="Hand">
 
                             <Border.Background>
                                 <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
@@ -109,8 +140,6 @@
                         </Border>
 
                     </StackPanel>
-
-                    <Rectangle Height="100"/>
 
                 </StackPanel>
 
