--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:tb="http://www.hardcodet.net/taskbar" xmlns:aero="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
         mc:Ignorable="d"
         d:DesignHeight="450" d:DesignWidth="800"
-        Title="TemporaTasks" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyDown="Window_KeyDown" MouseDown="Window_MouseDown" MinWidth="404" MinHeight="500" Loaded="Window_Loaded"
+        Title="TemporaTasks" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" KeyDown="Window_KeyDown" MouseUp="Window_MouseUp" MinWidth="404" MinHeight="500" Loaded="Window_Loaded"
         AllowsTransparency="True" Background="Transparent" KeyboardNavigation.DirectionalNavigation="None">
 
     <Grid Background="{StaticResource Background}">
