--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -49,10 +49,10 @@
                     </DockPanel>
                 </Border>
 
-                <ComboBox x:Name="SortComboBox" Width="100" VerticalContentAlignment="Center" SelectionChanged="SortComboBox_SelectionChanged" Focusable="False" FontFamily="TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Light" Padding="12 0 0 0" Margin="20 0 0 0" Cursor="Hand">
+                <ComboBox x:Name="SortComboBox" Width="100" VerticalContentAlignment="Center" SelectionChanged="SortComboBox_SelectionChanged" Focusable="False" Padding="15 0 0 0" Margin="20 0 0 0" Cursor="Hand" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular">
                     <ComboBoxItem Content="Name"/>
-                    <ComboBoxItem Content="Created Date"/>
-                    <ComboBoxItem Content="Due Date"/>
+                    <ComboBoxItem Content="Created"/>
+                    <ComboBoxItem Content="Due"/>
                 </ComboBox>
 
                 <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="AddButton_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="20 0 0 0" Cursor="Hand">
